force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <nameField>
        <displayFormat>Dpt-{0000}</displayFormat>
        <label>Department Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>