force-app/main/default/objects/Department__c/fields/First_Name_of_Head_Of_Department__c.field-meta.xml
<CustomField>
    <fullName>First_Name_of_Head_Of_Department__c</fullName>
    <label>First Name of Head Of Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>