force-app/main/default/objects/Department__c/fields/Head_Of_Department__c.field-meta.xml
<CustomField>
    <fullName>Head_Of_Department__c</fullName>
    <label>Head Of Department</label>
    <type>TextArea</type>
</CustomField>