force-app/main/default/objects/Department__c/fields/Last_Name_of_Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_of_Head_of_Department__c</fullName>
    <label>Last Name of Head of Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>