force-app/main/default/objects/Department__c/fields/Phone_number_of_Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Phone_number_of_Head_of_Department__c</fullName>
    <label>Phone number of Head Of Department</label>
    <type>Phone</type>
</CustomField>