force-app/main/default/objects/Department__c/fields/Salary_of_Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Salary_of_Head_of_Department__c</fullName>
    <label>Salary of Head of Department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>