force-app/main/default/objects/Department__c/listViews/List1.listView-meta.xml
<ListView>
    <fullName>List1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>List1</label>
</ListView>