force-app/main/default/objects/Department__c/listViews/My_List.listView-meta.xml
<ListView>
    <fullName>My_List</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>My List</label>
</ListView>